# SureFile

./: .gitignore  CMakeLists.txt  ChangeLog.txt  CurrentIssues.txt  KnownIssues.txt  README.md  surefile_package.cmake
Design Files/: SureFile UI.ai
Design Files/Application Artwork/: App Header.ai  Progress Icon.ai  Win App Icon.ai
Design Files/Installer/: installer images.ai
Design Files/Tour/linux/: tour linux.ai
Design Files/Tour/osx/: tour mac.ai
Design Files/Tour/windows/: tour windows.ai
Design Files/mac surefile tour/: tour mac.ai
helpers/: qt_creator_settings.xml
installer/linux/scripts/: lifestuff_client.desktop
installer/linux/scripts/fedora/: postinst  prerm
installer/linux/scripts/ubuntu/: postinst  prerm
installer/mac/: com.lifestuff.invigilator-checker.plist
installer/mac/icons/: mac_bundle.icns
installer/mac/scripts/: invigilator-checker  preinst  uninstall.sh
installer/osx/: com.lifestuff.invigilator.plist
installer/osx/macdeployqt.app/Contents/MacOS/: macdeployqt
installer/osx/scripts/: postinst
installer/shared/: eula.txt
installer/shared/icons/osx/: app_icon.icns
installer/text/lifestuff/: eula.txt
installer/text/surefile/: eula.txt
installer/win/: NSIS.template.in
installer/windows/: NSIS.template.in
src/maidsafe/surefile/: config.h  error.h  surefile_api.cc  surefile_api.h
src/maidsafe/surefile/qt_ui/: app_icon.rc  main.cc  main_resource.qrc
src/maidsafe/surefile/qt_ui/controllers/: main_view.cc  main_view.h
src/maidsafe/surefile/qt_ui/helpers/: app_return_code.h  application.cc  application.h  custom_message_box.cc  custom_message_box.h  qml_indexers.h  qt_log.cc  qt_log.h  qt_push_headers.cc  qt_push_headers.h
src/maidsafe/surefile/qt_ui/models/: .gitignore  surefile_api.cc  surefile_api.h
src/maidsafe/surefile/qt_ui/qobjects/: api_model.cc  api_model.h  main_controller.cc  main_controller.h  password_box.cc  password_box.h  service_list.cc  service_list.h  store_path_controller.cc  store_path_controller.h  store_path_converter.cc  store_path_converter.h  system_tray_icon.cc  system_tray_icon.h
src/maidsafe/surefile/qt_ui/resources/: app_icon.rc  resources.qrc
src/maidsafe/surefile/qt_ui/resources/qml/: CustomButton.qml  Login.qml  Main.qml  NewUser.qml  Throbber.qml  new_user.qml
src/maidsafe/surefile/qt_ui/resources/styles/: common.qss
src/maidsafe/surefile/qt_ui/views/: ChooseStorePath.qml  CreateAccount.qml  ErrorView.qml  LicenseAgreement.qml  Login.qml  MainView.qml  PasswordBox.qml  Progress.qml  Settings.qml  StatusInfo.qml  StorePath.qml  Tour.qml  main.qml
src/maidsafe/surefile/qt_ui/views/create_account/: Credential.qml  LicenseAgreement.qml  PasswordWarning.qml  Warning.qml
src/maidsafe/surefile/qt_ui/views/settings/: AddService.qml  RemoveService.qml  RemoveServiceWarning.qml  ServiceOptions.qml  ServiceSuccess.qml
src/maidsafe/surefile/qt_ui/views/tour/: Page1.qml  Page2.qml  Page3.qml  Page4.qml  Page5.qml  Tour.qml  TourTemplatePage.qml
src/maidsafe/surefile/tests/: surefile_test.cc
src/maidsafe/surefile/ui/: app_icon.rc  main.cc
src/maidsafe/surefile/ui/helpers/: app_return_code.h  application.cc  application.h  custom_message_box.cc  custom_message_box.h  qml_indexers.h  qt_log.cc  qt_log.h  qt_push_headers.cc
src/maidsafe/surefile/ui/qobjects/: api_model.cc  api_model.h  main_controller.cc  main_controller.h  service_list.cc  service_list.h  store_path_converter.cc  store_path_converter.h  system_tray_icon.cc  system_tray_icon.h
src/maidsafe/surefile/ui/views/: Settings.qml  Tour.qml
src/maidsafe/surefile/ui/views/create_account/: Credential.qml  LicenseAgreement.qml  PasswordWarning.qml
src/maidsafe/surefile/ui/views/settings/: AddService.qml  RemoveServiceWarning.qml  ServiceOptions.qml
src/maidsafe/surefile/ui/views/tour/: Page2.qml  Page3.qml  Page4.qml
